--- a/Nanopore.yaml
+++ b/Nanopore.yaml
@@ -11,10 +11,10 @@ dependencies:
   - alsa-lib=1.2.12=h4ab18f5_0
   - asttokens=2.4.1=pyhd8ed1ab_0
   - bcftools=1.21=h8b25389_0
-  - biopython=1.78=py311h5eee18b_0
+  - biopython
   - brotli=1.1.0=hb9d3cd8_2
   - brotli-bin=1.1.0=hb9d3cd8_2
-  - brotli-python=1.1.0=py311hfdbb021_2
+  - brotli-python
   - bzip2=1.0.8=h4bc722e_7
   - c-ares=1.34.2=heb4867d_0
   - ca-certificates=2024.9.24=h06a4308_0
@@ -22,14 +22,14 @@ dependencies:
   - cached_property=1.5.2=pyha770c72_1
   - cairo=1.18.0=hebfffa5_3
   - certifi=2024.8.30=pyhd8ed1ab_0
-  - cffi=1.17.1=py311hf29c0ef_0
+  - cffi
   - charset-normalizer=3.4.0=pyhd8ed1ab_0
   - colorama=0.4.6=pyhd8ed1ab_0
   - comm=0.2.2=pyhd8ed1ab_0
-  - contourpy=1.3.0=py311hd18a35c_2
-  - cpython=3.11.10=py311hd8ed1ab_3
+  - contourpy
+  - cpython
   - cycler=0.12.1=pyhd8ed1ab_0
-  - debugpy=1.8.7=py311hfdbb021_0
+  - debugpy
   - decorator=5.1.1=pyhd8ed1ab_0
   - exceptiongroup=1.2.2=pyhd8ed1ab_0
   - executing=2.1.0=pyhd8ed1ab_0
@@ -42,17 +42,17 @@ dependencies:
   - fontconfig=2.14.2=h14ed4e7_0
   - fonts-anaconda=1=h8fa9717_0
   - fonts-conda-ecosystem=1=hd3eb1b0_0
-  - fonttools=4.54.1=py311h9ecbd09_0
+  - fonttools
   - freetype=2.12.1=h267a509_2
   - fsspec=2024.9.0=pyhff2d567_0
   - giflib=5.2.2=h5eee18b_0
   - gmp=6.3.0=hac33072_2
-  - gmpy2=2.1.5=py311h0f6cedb_2
+  - gmpy2
   - graphite2=1.3.14=h295c915_1
-  - grpcio=1.62.2=py311ha6695c7_0
+  - grpcio
   - gsl=2.7=he838d99_0
   - h2=4.1.0=pyhd8ed1ab_0
-  - h5py=3.12.1=nompi_py311hb639ac4_101
+  - h5py
   - harfbuzz=9.0.0=hda332d3_1
   - hdf5=1.14.3=nompi_hdf9ad27_105
   - hpack=4.0.0=pyh9f0ad1d_0
@@ -69,7 +69,7 @@ dependencies:
   - jupyter_client=8.6.3=pyhd8ed1ab_0
   - jupyter_core=5.7.2=pyh31011fe_1
   - keyutils=1.6.1=h166bdaf_0
-  - kiwisolver=1.4.7=py311hd18a35c_0
+  - kiwisolver
   - krb5=1.21.3=h659f571_0
   - lcms2=2.16=hb7c19ff_0
   - ld_impl_linux-64=2.43=h712a8e2_1
@@ -118,11 +118,11 @@ dependencies:
   - libxcb=1.17.0=h8a09558_0
   - libxcrypt=4.4.36=hd590300_1
   - libzlib=1.3.1=hb9d3cd8_2
-  - mappy=2.28=py311h0152c62_2
-  - markupsafe=3.0.1=py311h2dc5d0c_1
-  - matplotlib-base=3.9.2=py311h2b939e6_1
+  - mappy
+  - markupsafe
+  - matplotlib-base
   - matplotlib-inline=0.1.7=pyhd8ed1ab_0
-  - medaka=2.0.1=py311hfd2b166_0
+  - medaka=2.0.1 # removed specific version
   - minimap2=2.24=h9bf148f_2
   - mpc=1.3.1=h24ddda3_1
   - mpfr=4.2.1=h90cbb55_3
@@ -132,50 +132,50 @@ dependencies:
   - nest-asyncio=1.6.0=pyhd8ed1ab_0
   - networkx=3.4.1=pyhd8ed1ab_0
   - nomkl=1.0=h5ca1d4c_0
-  - numpy=1.26.4=py311h64a7726_0
+  - numpy
   - ont-fast5-api=4.1.3=pyhdfd78af_0
   - openjdk=22.0.1=h8651b0f_1
   - openjpeg=2.5.2=h488ebb8_0
   - openssl=3.3.2=hb9d3cd8_0
   - packaging=24.1=pyhd8ed1ab_0
-  - pandas=2.2.3=py311h7db5c69_1
-  - parasail-python=1.3.4=py311h6eedab3_2
+  - pandas
+  - parasail-python
   - parso=0.8.4=pyhd8ed1ab_0
   - pcre2=10.44=hba22ea6_2
   - perl=5.32.1=7_hd590300_perl5
   - pexpect=4.9.0=pyhd8ed1ab_0
   - pickleshare=0.7.5=py_1003
-  - pillow=11.0.0=py311h49e9ac3_0
+  - pillow
   - pip=24.2=pyh8b19718_1
   - pixman=0.43.2=h59595ed_0
   - platformdirs=4.3.6=pyhd8ed1ab_0
   - progressbar33=2.4=py_0
   - prompt-toolkit=3.0.48=pyha770c72_0
-  - psutil=6.0.0=py311h9ecbd09_2
+  - psutil
   - pthread-stubs=0.4=hb9d3cd8_1002
   - ptyprocess=0.7.0=pyhd3deb0d_0
   - pure_eval=0.2.3=pyhd8ed1ab_0
-  - pyabpoa=1.5.3=py311h0152c62_0
+  - pyabpoa
   - pycparser=2.22=pyhd8ed1ab_0
   - pygments=2.18.0=pyhd8ed1ab_0
   - pyparsing=3.2.0=pyhd8ed1ab_1
-  - pysam=0.22.1=py311h1f0e11c_2
+  - pysam
   - pysocks=1.7.1=pyha2e5f31_6
-  - pyspoa=0.2.1=py311hc849397_3
-  - python=3.11.10=hc5c86c4_3_cpython
+  - pyspoa
+  - python=3.10.* # changed to Python 3.10
   - python-dateutil=2.9.0=pyhd8ed1ab_0
-  - python-edlib=1.3.9.post1=py311h2a4ad6c_0
+  - python-edlib
   - python-tzdata=2024.2=pyhd8ed1ab_0
-  - python_abi=3.11=5_cp311
-  - pytorch=2.3.1=cpu_generic_py311h8ca351a_0
+  - python_abi
+  - pytorch
   - pytz=2024.1=pyhd8ed1ab_0
-  - pyzmq=26.2.0=py311h7deb3e3_3
+  - pyzmq
   - qhull=2020.2=h434a139_5
   - re2=2023.09.01=h7f4b329_2
   - readline=8.2=h8228510_1
   - requests=2.32.3=pyhd8ed1ab_0
   - samtools=1.21=h50ea8bc_0
-  - seaborn=0.13.2=py311h06a4308_0
+  - seaborn
   - setuptools=75.1.0=pyhd8ed1ab_0
   - six=1.16.0=pyh6c4a22f_0
   - sleef=3.7=h1b44611_0
@@ -184,7 +184,7 @@ dependencies:
   - sympy=1.13.3=pyh2585a3b_104
   - tar=1.34=hb2e2bae_1
   - tk=8.6.13=noxft_h4845f30_101
-  - tornado=6.4.1=py311h9ecbd09_1
+  - tornado
   - tqdm=4.66.5=pyhd8ed1ab_0
   - traitlets=5.14.3=pyhd8ed1ab_0
   - typing_extensions=4.12.2=pyha770c72_0
@@ -209,6 +209,6 @@ dependencies:
   - zeromq=4.3.5=h3b0a872_6
   - zipp=3.20.2=pyhd8ed1ab_0
   - zlib=1.3.1=hb9d3cd8_2
-  - zstandard=0.23.0=py311hbc35293_1
+  - zstandard
   - zstd=1.5.6=ha6fb4c9_0
 prefix: /home/jettliu/miniconda3/envs/nanopore
